--- a/popup.css
+++ b/popup.css
@@ -149,3 +149,7 @@ body {
     font: 12px/1.5 Microsoft YaHei, tahoma, arial, Hiragino Sans GB, \\5b8b\4f53, sans-serif;
     color: #666;
 }
+
+p {
+    line-height: 25px;
+}
