使用 mongodb 记录 session 信息

--- a/popup.css
+++ b/popup.css
@@ -153,3 +153,15 @@ body {
 p {
     line-height: 25px;
 }
+
+#session_id {
+    font-weight: bold;
+}
+
+#session_id span {
+
+}
+
+#session_id span:hover {
+    cursor: pointer;
+}
